--- a/sender.html
+++ b/sender.html
@@ -96,7 +96,9 @@
 				result = document.getElementById('getData');
 			}else if(data.inout == 'getData2'){
 				result = document.getElementById('getData2');
-			}
+        }else{
+  				result = document.getElementById('getData2');
+        }
 			result.innerHTML = data.value;
 		});
 
